php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #25836 strange behavior magic_quotes with multi-dimensional arrays
Submitted: 2003-10-11 08:57 UTC Modified: 2003-10-13 23:49 UTC
From: sitnikov at infonet dot ee Assigned:
Status: Closed Package: *General Issues
PHP Version: 4CVS, 5CVS OS: Linux
Private report: No CVE-ID: None
 [2003-10-11 08:57 UTC] sitnikov at infonet dot ee
Description:
------------
Only "first level keys" was slashed.




Reproduce code:
---------------
<?
	echo "<pre>";print_r($_POST);echo "</pre>";
?>
<form method="POST">
<input type=text name="test['aaa']['bbb']" value="'">
<input type=submit>
</form>

Expected result:
----------------
Array
(
    [test] => Array
        (
            [\'aaa\'] => Array
                (
                    [\'bbb\'] => \'
                )

        )
)

Actual result:
--------------
Array
(
    [test] => Array
        (
            [\'aaa\'] => Array
                (
                    ['bbb'] => \'
                )

        )
)

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2003-10-13 23:49 UTC] iliaa@php.net
This bug has been fixed in CVS.

In case this was a PHP problem, snapshots of the sources are packaged
every three hours; this change will be in the next snapshot. You can
grab the snapshot at http://snaps.php.net/.
 
In case this was a documentation problem, the fix will show up soon at
http://www.php.net/manual/.

In case this was a PHP.net website problem, the change will show
up on the PHP.net site and on the mirror sites in short time.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Fri Sep 25 18:00:01 2026 UTC